# langgraph-rag-chatbot

./: .env  README.md  app.py  pyproject.toml  readme.md  requirements.txt
data/processed/: chroma.sqlite3
src/agents/: document_processor.py  domain_selector.py  query_agent.py  router.py
src/graph/: main_graph.py
src/langgraph_rag_chatbot/: __init__.py
src/parsers/: pdf_parser.py  web_parser.py
src/retrievers/: vector_retriever.py
src/utils/: config.py
