[project]
name = "langgraph-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alithecoder98", email = "aleerazaa30@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.7",
    "langchain-google-genai>=2.1.3",
    "langgraph>=0.3.34",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
]

[project.scripts]
langgraph-rag-chatbot = "langgraph_rag_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
